fix: [IDIP-47] Fix callout box heading spacing

--- a/callout.css
+++ b/callout.css
@@ -2,7 +2,7 @@
     border-radius: 10px 10px 10px 0;
     background: #f6f1f1;
     margin: 0 auto;
-    padding: 75px 20px 10px;
+    padding: 0 20px 10px;
     margin-bottom: 30px;
     position: relative;
     overflow: hidden;
